# discli

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml
agents/: discord-agent.md
docs/: docs-config.json
docs/_css/: custom.css
docs/_landing/: index.html  script.js  styles.css
docs/architecture/: overview.mdx  security-model.mdx  serve-protocol.mdx  token-resolution.mdx
docs/comparisons/: vs-cli-tools.mdx  vs-discord-libraries.mdx  vs-hosted-bots.mdx  why-discli.mdx
docs/getting-started/: configuration.mdx  installation.mdx  quickstart.mdx  your-first-bot.mdx
docs/guides/: building-agents.mdx  cli-usage.mdx  components-modals.mdx  scripting-automation.mdx  security-permissions.mdx  serve-mode.mdx  slash-commands.mdx  streaming-responses.mdx
docs/plans/: 2026-03-14-discli-design.md  2026-03-14-discli-implementation.md  2026-03-15-docs-implementation.md  2026-03-15-docs-site-design.md
docs/reference/: cli-commands.mdx  permission-profiles.mdx  serve-actions.mdx  serve-events.mdx
docs/troubleshooting/: common-issues.mdx  edge-cases.mdx  faq.mdx  (+1 more)
examples/: ai_serve_agent.py  channel_logger.sh  claude_agent.py  component_test_bot.py  moderation_bot.py  reaction_poll.sh  serve_bot.py  support_agent.py  thread_support_agent.py
installers/: install.ps1  install.sh
tests/: test_client.py  test_config.py  test_utils.py
(+37 files in other folders)
