[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discli"
version = "0.1.0"
description = "Discord CLI for AI agents"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3",
    "click>=8.1",
]

[project.scripts]
discli = "discli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
